--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>A World</title>
+      <title>DeDakdeckers</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -20,7 +20,7 @@
       <!-- Responsive-->
       <link rel="stylesheet" href="css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="images/favicon.ico" type="image/png" />
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
@@ -107,50 +107,24 @@
                   <div class="col-md-4">
                      <div><img src="images/warranty.png" class="services_img"></div>
                      <div class="btn_main"><a href="#">Garantie</a></div>
-                     <div><p>Ten slotte kunnen er ook problemen opduiken na de uitvoering van de werken. Preventief doen we ons best om alles zo goed mogelijk uit te voeren maar indien er toch een problem opkomt na de uitvoering van de werken dan zullen wij als dakdekkers er nog altijd voor u zijn. Om u hier ook van te vrijwaren geven we elk klant van ons garantie op de uitgevoerde werken. Deze garantie is geldig voor een looptijd van 15 jaar.</p> </div>
+                     <div class="servicesTekst"><p>Ten slotte kunnen er ook problemen opduiken na de uitvoering van de werken. Preventief doen we ons best om alles zo goed mogelijk uit te voeren maar indien er toch een problem opkomt na de uitvoering van de werken dan zullen wij als dakdekkers er nog altijd voor u zijn. Om u hier ook van te vrijwaren geven we elk klant van ons garantie op de uitgevoerde werken. Deze garantie is geldig voor een looptijd van 15 jaar.</p> </div>
                   </div>
                   <div class="col-md-4">
-                     <div><img src="images/img-2.png" class="services_img"></div>
-                     <div class="btn_main active"><a href="#">Hiking</a></div>
+                     <div><img src="images/qualityControl.png" class="services_img"></div>
+                     <div class="btn_main active"><a href="#">Kwaliteit</a></div>
+                     <div class="servicesTekst"><p>De plaatsing en uitvoering van uw werken is natuurlijk wel een belangrijk bestanddeel van het totaal packet maar hier blijft het niet bij want de comminicatie en de organisatie die gepaard gaan met de plaatsing en de uitvoering van de werken is minstens van evengroot belang. Daarom hebben we zowel een volledig administratief team als een commercieel team en een technisch team die elk klant van ons als backup heeft voor een correct verloop van de werkzaamheden. De nauwe samenwerking tussen de drie teams onderling maakt de dakdeckers uniek op de markt.</p> </div>
                   </div>
                   <div class="col-md-4">
-                     <div><img src="images/img-3.png" class="services_img"></div>
-                     <div class="btn_main"><a href="#">Camping</a></div>
+                     <div><img src="images/warranty.png" class="services_img"></div>
+                     <div class="btn_main"><a href="#">Administratief</a></div>
+                     <div class="servicesTekst"><p>De dakdeckers is gestart vanuit de zeer gespecialiseerde vakmanschap die jarenlang actief zijn in dakisolatie en de nodige vakbekwaamheid hebben om uw dak zo professioneel mogelijk af te werken met aandacht aan alle details. </p> </div>
                   </div>
                </div>
             </div>
          </div>
       </div>
       <!-- services section end -->
-      <!-- about section start -->
-      <div class="about_section layout_padding">
-         <div class="container-fluid">
-            <div class="row">
-               <div class="col-md-6">
-                  <div class="about_taital_main">
-                     <h1 class="about_taital">About Us</h1>
-                     <p class="about_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All </p>
-                     <div class="readmore_bt"><a href="#">Read More</a></div>
-                  </div>
-               </div>
-               <div class="col-md-6 padding_right_0">
-                  <div><img src="images/about-img.png" class="about_img"></div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!-- about section end -->
-      <!-- blog section start -->
-      <div class="blog_section layout_padding">
-         <div class="container">
-            <h1 class="blog_taital">See Our  Video</h1>
-            <p class="blog_text">many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which</p>
-            <div class="play_icon_main">
-               <div class="play_icon"><a href="#"><img src="images/play-icon.png"></a></div>
-            </div>
-         </div>
-      </div>
-      <!-- blog section end -->
+
       <!-- client section start -->
       <div class="client_section layout_padding">
          <div class="container">
@@ -244,7 +218,7 @@
                <div class="call_text"><img src="images/call-icon.png"></div>
                <div class="call_text"><a href="#">Call +01 1234567890</a></div>
                <div class="call_text"><img src="images/mail-icon.png"></div>
-               <div class="call_text"><a href="#">demo@gmail.com</a></div>
+               <div class="call_text"><a href="#">info@dedakdeckers.com</a></div>
             </div>
             <div class="social_icon">
                <ul>
@@ -260,7 +234,7 @@
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free html  Templates</a></p>
+            <p class="copyright_text">2024 All Rights Reserved.</p>
          </div>
       </div>
       <!-- copyright section end -->
