--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="services.html">Services</a>
+                           <a class="nav-link" href="services.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
                            <a class="nav-link " href="contact.html">Contact</a>
@@ -64,10 +64,10 @@
                <div class="logo"><a href="index.html"><img src="images/logoo.png"></a></div>
                <div class="menu_main">
                   <ul>
-                     <li class="active"><a href="index.html">Home</a></li>
-                     <li><a href="about.html">About Us</a></li>
-                     <li><a href="services.html">Services</a></li>
-                     <li><a href="contact.html">Contact us</a></li>
+                     <li><a href="index.html">Home</a></li>
+                     <li class="activeNav"><a href="about.html">About</a></li>
+                     <li><a href="services.html">Portfolio</a></li>
+                     <li><a href="contact.html">Contact</a></li>
                   </ul>
                </div>
             </div>
