--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                <div class="logo"><a href="index.html"><img src="images/logoo.png"></a></div>
                <div class="menu_main">
                   <ul>
-                     <li class="active"><a href="index.html">Home</a></li>
+                     <li class="activeNav"><a href="index.html">Home</a></li>
                      <li><a href="about.html">About</a></li>
                      <li><a href="services.html">Portfolio</a></li>
                      <li><a href="contact.html">Contact</a></li>
