--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>DeDakdeckers</title>
+      <title>DEDAKDECKERS</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -51,7 +51,7 @@
                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="services.html">Portfolio</a>
+                           <a class="nav-link" href="portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
                            <a class="nav-link " href="contact.html">Contact</a>
@@ -66,7 +66,7 @@
                   <ul>
                      <li class="activeNav"><a href="index.html">Home</a></li>
                      <li><a href="about.html">About</a></li>
-                     <li><a href="services.html">Portfolio</a></li>
+                     <li><a href="portfolio.html">Portfolio</a></li>
                      <li><a href="contact.html">Contact</a></li>
                   </ul>
                </div>
