--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>About</title>
+      <title>DEDAKDECKERS</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -20,7 +20,7 @@
       <!-- Responsive-->
       <link rel="stylesheet" href="css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="images/favicon.ico" type="image/png" />
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
@@ -38,7 +38,7 @@
          <div class="header_main">
             <div class="mobile_menu">
                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <div class="logo_mobile"><a href="index.html"><img src="images/logo.png"></a></div>
+                  <div class="logo_mobile"><a href="index.html"><img src="images/logoo.png"></a></div>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
@@ -51,10 +51,7 @@
                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="services.html">Services</a>
-                        </li>
-                        <li class="nav-item">
-                           <a class="nav-link " href="blog.html">Blog</a>
+                           <a class="nav-link" href="portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
                            <a class="nav-link " href="contact.html">Contact</a>
@@ -64,14 +61,13 @@
                </nav>
             </div>
             <div class="container-fluid">
-               <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+               <div class="logo"><a href="index.html"><img src="images/logoo.png"></a></div>
                <div class="menu_main">
                   <ul>
-                     <li class="active"><a href="index.html">Home</a></li>
+                     <li><a href="index.html">Home</a></li>
                      <li><a href="about.html">About</a></li>
-                     <li><a href="services.html">Services</a></li>
-                     <li><a href="blog.html">Blog</a></li>
-                     <li><a href="contact.html">Contact us</a></li>
+                     <li><a href="portfolio.html">Portfolio</a></li>
+                     <li class="activeNav"><a href="contact.html">Contact</a></li>
                   </ul>
                </div>
             </div>
@@ -79,26 +75,37 @@
       </div>
       <!-- header section end -->
       <!-- contact section start -->
-      <div class="contact_section layout_padding">
-        <div class="container">
-          <h1 class="contact_taital">Request A Call Back</h1>
-          <div class="email_text">
-             <div class="form-group">
-                <input type="text" class="email-bt" placeholder="Name" name="Email">
-             </div>
-             <div class="form-group">
-                <input type="text" class="email-bt" placeholder="Phone Numbar" name="Email">
-             </div>
-             <div class="form-group">
-                <input type="text" class="email-bt" placeholder="Email" name="Email">
-             </div>
-             <div class="form-group">
-                <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
-             </div>
-             <div class="send_btn"><a href="#">SEND</a></div>
+      <form action="https://formsubmit.co/info@dedakdeckers.com" method="POST">
+         <input type="hidden" name="_subject" value="Contact met DeDakdeckers!">
+         <input type="hidden" name="_captcha" value="false">
+         <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
+         <div class="contact_section layout_padding">
+            <div class="container">
+              <h1 class="contact_taital">Geef hier uw gegevens zodat we contact met u kunnen opnemen.</h1>
+              <div class="email_text">
+                 <div class="form-group">
+                    <input type="text" class="email-bt" placeholder="Name" name="name" required>
+                 </div>
+                 <div class="form-group">
+                     <input type="email" class="email-bt" name="email" placeholder="Email Address" required>
+                 </div>
+                 <div class="form-group">
+                    <input type="text" class="email-bt" placeholder="Phonenumber" name="phonenumber" required>
+                 </div>
+                 <div class="form-group">
+                    <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
+                 </div>
+                 <div class="send_btn"><button class="send_btn" type="submit">Send</button></div>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
+
+
+
+
+      </form>
+
+      
       <!-- contact section end -->
       <!-- footer section start -->
       <div class="footer_section layout_padding">
