--- a/index.html
+++ b/index.html
@@ -107,102 +107,33 @@
                   <div class="col-md-4">
                      <div><img src="images/warranty.png" class="services_img"></div>
                      <div class="btn_main"><a href="#">Garantie</a></div>
-                     <div class="servicesTekst"><p>Ten slotte kunnen er ook problemen opduiken na de uitvoering van de werken. Preventief doen we ons best om alles zo goed mogelijk uit te voeren maar indien er toch een problem opkomt na de uitvoering van de werken dan zullen wij als dakdekkers er nog altijd voor u zijn. Om u hier ook van te vrijwaren geven we elk klant van ons garantie op de uitgevoerde werken. Deze garantie is geldig voor een looptijd van 15 jaar.</p> </div>
+                     <div class="servicesTekst"><p>Bij onze dakrenovatieprojecten streven we niet alleen naar directe kwaliteit, maar ook naar langdurige gemoedsrust voor onze klanten. Daarom bieden wij een garantie van maar liefst 15 jaar op onze werkzaamheden.</p> </div>
                   </div>
                   <div class="col-md-4">
                      <div><img src="images/qualityControl.png" class="services_img"></div>
-                     <div class="btn_main active"><a href="#">Kwaliteit</a></div>
-                     <div class="servicesTekst"><p>De plaatsing en uitvoering van uw werken is natuurlijk wel een belangrijk bestanddeel van het totaal packet maar hier blijft het niet bij want de comminicatie en de organisatie die gepaard gaan met de plaatsing en de uitvoering van de werken is minstens van evengroot belang. Daarom hebben we zowel een volledig administratief team als een commercieel team en een technisch team die elk klant van ons als backup heeft voor een correct verloop van de werkzaamheden. De nauwe samenwerking tussen de drie teams onderling maakt de dakdeckers uniek op de markt.</p> </div>
+                     <div class="btn_main"><a href="#">Kwaliteit</a></div>
+                     <div class="servicesTekst"><p> Wij streven altijd naar de hoogste kwaliteit en vakmanschap in al onze projecten. Ons team van deskundige vakmensen zet zich in voor uitmuntendheid en streeft naar perfectie in elk aspect van het werk.</p> </div>
                   </div>
                   <div class="col-md-4">
                      <div><img src="images/warranty.png" class="services_img"></div>
                      <div class="btn_main"><a href="#">Administratief</a></div>
-                     <div class="servicesTekst"><p>De dakdeckers is gestart vanuit de zeer gespecialiseerde vakmanschap die jarenlang actief zijn in dakisolatie en de nodige vakbekwaamheid hebben om uw dak zo professioneel mogelijk af te werken met aandacht aan alle details. </p> </div>
+                     <div class="servicesTekst"><p>Bij ons dakrenovatiebedrijf streven we niet alleen naar uitmuntend vakmanschap op het dak, maar ook naar een efficiënte en zorgvuldige administratieve afhandeling. We geloven sterk in de kracht van een goed georganiseerde administratie om ervoor te zorgen dat elk project soepel verloopt en aan de hoogste standaarden voldoet.</p> </div>
                   </div>
                </div>
             </div>
          </div>
       </div>
-      <!-- services section end -->
 
-      <!-- client section start -->
-      <div class="client_section layout_padding">
-         <div class="container">
-            <h1 class="client_taital">Testimonial</h1>
-            <div class="client_section_2">
-               <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                  <ol class="carousel-indicators">
-                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                  </ol>
-                  <div class="carousel-inner">
-                     <div class="carousel-item active">
-                        <div class="client_main">
-                           <div class="box_left">
-                              <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugia</p>
-                           </div>
-                           <div class="box_right">
-                              <div class="client_taital_left">
-                                 <div class="client_img"><img src="images/client-img.png"></div>
-                                 <div class="quick_icon"><img src="images/quick-icon.png"></div>
-                              </div>
-                              <div class="client_taital_right">
-                                 <h4 class="client_name">Dame</h4>
-                                 <p class="customer_text">Customer</p>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="carousel-item">
-                        <div class="client_main">
-                           <div class="box_left">
-                              <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugia</p>
-                           </div>
-                           <div class="box_right">
-                              <div class="client_taital_left">
-                                 <div class="client_img"><img src="images/client-img.png"></div>
-                                 <div class="quick_icon"><img src="images/quick-icon.png"></div>
-                              </div>
-                              <div class="client_taital_right">
-                                 <h4 class="client_name">Dame</h4>
-                                 <p class="customer_text">Customer</p>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="carousel-item">
-                        <div class="client_main">
-                           <div class="box_left">
-                              <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugia</p>
-                           </div>
-                           <div class="box_right">
-                              <div class="client_taital_left">
-                                 <div class="client_img"><img src="images/client-img.png"></div>
-                                 <div class="quick_icon"><img src="images/quick-icon.png"></div>
-                              </div>
-                              <div class="client_taital_right">
-                                 <h4 class="client_name">Dame</h4>
-                                 <p class="customer_text">Customer</p>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
       <!-- client section start -->
       <!-- choose section start -->
       <div class="choose_section layout_padding">
          <div class="container">
-            <h1 class="choose_taital">Why Choose Us</h1>
-            <p class="choose_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All </p>
-            <div class="read_bt_1"><a href="#">Read More</a></div>
+            <h1 class="choose_taital">Waarom voor ons kiezen?</h1>
+            <p class="choose_text">Ons bedrijf beschikt over uitgebreide ervaring en expertise op het gebied van dakrenovatie en zonnepaneleninstallatie. We hebben talloze projecten succesvol afgerond en kunnen bogen op een bewezen staat van dienst in het leveren van hoogwaardige resultaten.</p>
+            <div class="read_bt_1"><a href="./about.html">Read More</a></div>
             <div class="newsletter_box">
-               <h1 class="let_text">Let Start Talk with Us</h1>
-               <div class="getquote_bt"><a href="#">Get A Quote</a></div>
+               <h1 class="let_text">Neem nu contact op!</h1>
+               <div class="getquote_bt"><a href="./contact.html">Klik hier</a></div>
             </div>
          </div>
       </div>
@@ -210,13 +141,10 @@
       <!-- footer section start -->
       <div class="footer_section layout_padding">
          <div class="container">
-            <div class="input_btn_main">
-               <input type="text" class="mail_text" placeholder="Enter your email" name="Enter your email">
-               <div class="subscribe_bt"><a href="#">Subscribe</a></div>
-            </div>
+
             <div class="location_main">
                <div class="call_text"><img src="images/call-icon.png"></div>
-               <div class="call_text"><a href="#">Call +01 1234567890</a></div>
+               <div class="call_text"><a href="#">+32 485 45 33 35</a></div>
                <div class="call_text"><img src="images/mail-icon.png"></div>
                <div class="call_text"><a href="#">info@dedakdeckers.com</a></div>
             </div>
