--- a/portfolio.html
+++ b/portfolio.html
@@ -82,15 +82,15 @@
                      <div class="row">
                         <div class="col-md-4">
                            <div><img src="realisaties/1.JPG" class="services_img"></div>
-                           <div class="btn_main"><a href="#">Garantie</a></div>
+                           <div class="btn_main"><a target="_blank" href="https://www.google.com/maps/place/Sint-Niklaas/@51.1688197,4.0212477,12z/data=!3m1!4b1!4m6!3m5!1s0x47c38ea2e182376d:0xd60c33c3ad57f48d!8m2!3d51.1653295!4d4.1386501!16zL20vMDE0OXoz?entry=ttu">Sint-Niklaas</a></div>
                         </div>
                         <div class="col-md-4">
                            <div><img src="realisaties/2.JPG" class="services_img"></div>
-                           <div class="btn_main active"><a href="#">Kwaliteit</a></div>
+                           <div class="btn_main"><a target="_blank" href="https://www.google.com/maps/place/Belsele,+9111+Sint-Niklaas/@51.1428494,4.0758831,15z/data=!3m1!4b1!4m6!3m5!1s0x47c38fa8627a5933:0x9dbf65c8c5d80f00!8m2!3d51.1428369!4d4.0861828!16zL20vMDlzcHdr?entry=ttu">Belsele</a></div>
                         </div>
                         <div class="col-md-4">
                            <div><img src="realisaties/3.JPG" class="services_img"></div>
-                           <div class="btn_main"><a href="#">Administratief</a></div>
+                           <div class="btn_main"><a target="_blank" href="https://www.google.com/maps/place/Antwerp/@51.2605795,4.192968,11z/data=!3m1!4b1!4m6!3m5!1s0x47c3f68ebfc3887d:0x3eaf448482a88ab8!8m2!3d51.2213404!4d4.4051485!16zL20vMGZ5ZHc?entry=ttu">Antwerpen</a></div>
                         </div>
                      </div>
                   </div>
@@ -103,15 +103,15 @@
                <div class="row">
                   <div class="col-md-4">
                      <div><img src="realisaties/4.JPG" class="services_img"></div>
-                     <div class="btn_main"><a href="#">Garantie</a></div>
+                     <div class="btn_main"><a target="_blank" href="https://www.google.com/maps/place/Ostend/@51.2605795,4.192968,11z/data=!4m6!3m5!1s0x47dca8d31895a595:0x3e97dbf009839842!8m2!3d51.2246631!4d2.9091818!16zL20vMDE0NWc5?entry=ttu">Oostende</a></div>
                   </div>
                   <div class="col-md-4">
                      <div><img src="realisaties/5.png" class="services_img"></div>
-                     <div class="btn_main active"><a href="#">Kwaliteit</a></div>
+                     <div class="btn_main"><a target="_blank" href="https://www.google.com/maps/place/Bruges/@51.2152512,2.8801815,13z/data=!4m6!3m5!1s0x47c350d0c11e420d:0x1aa2f35ac8834df7!8m2!3d51.2091807!4d3.2247552!16zL20vMGs0MjQ?entry=ttu">Brugge</a></div>
                   </div>
                   <div class="col-md-4">
                      <div><img src="realisaties/6.png" class="services_img"></div>
-                     <div class="btn_main"><a href="#">Administratief</a></div>
+                     <div class="btn_main"><a target="_blank" href="https://www.google.com/maps/place/Li%C3%A8ge/@50.6246813,5.5168778,12z/data=!3m1!4b1!4m6!3m5!1s0x47c0f74b8eacfcfb:0x40099ab2f4d6b40!8m2!3d50.6329586!4d5.5697498!16zL20vMGQ0azI?entry=ttu">Luik</a></div>
                   </div>
                </div>
             </div>
