Added animation to containers

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <link rel="stylesheet" href="css/owl.carousel.min.css">
       <link rel="stylesheet" href="css/owl.theme.default.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+      <script defer src="./js/app.js"></script>
    </head>
    <body>
       <!-- header section start -->
@@ -104,20 +105,20 @@
                Bij De Dakdeckers streven we naar hoogwaardige dakwerken, zowel wat betreft materialen als vakmanschap. Onze adviseurs en administratieve team zorgen voor een vlotte ervaring door het hele proces, met speciale aandacht voor elke klant en project. Met ons totaalpakket bieden we uitstekende service en uitvoering tegen een aantrekkelijk budget, dankzij onze specialisatie in dakwerken garanderen we de beste kwaliteit voor onze klanten.</p>
             <div class="services_section_2">
                <div class="row">
-                  <div class="col-md-4">
-                     <div><img src="images/warranty.png" class="services_img"></div>
-                     <div class="btn_main"><a href="#">Garantie</a></div>
-                     <div class="servicesTekst"><p>Bij onze dakrenovatieprojecten streven we niet alleen naar directe kwaliteit, maar ook naar langdurige gemoedsrust voor onze klanten. Daarom bieden wij een garantie van maar liefst 15 jaar op onze werkzaamheden.</p> </div>
-                  </div>
-                  <div class="col-md-4">
+                  <div class="col-md-4 effect hiddenGjin">
                      <div><img src="images/qualityControl.png" class="services_img"></div>
                      <div class="btn_main"><a href="#">Kwaliteit</a></div>
                      <div class="servicesTekst"><p> Wij streven altijd naar de hoogste kwaliteit en vakmanschap in al onze projecten. Ons team van deskundige vakmensen zet zich in voor uitmuntendheid en streeft naar perfectie in elk aspect van het werk.</p> </div>
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-4 effect hiddenGjin">
                      <div><img src="images/warranty.png" class="services_img"></div>
                      <div class="btn_main"><a href="#">Administratief</a></div>
-                     <div class="servicesTekst"><p>Bij ons dakrenovatiebedrijf streven we niet alleen naar uitmuntend vakmanschap op het dak, maar ook naar een efficiënte en zorgvuldige administratieve afhandeling. We geloven sterk in de kracht van een goed georganiseerde administratie om ervoor te zorgen dat elk project soepel verloopt en aan de hoogste standaarden voldoet.</p> </div>
+                     <div class="servicesTekst"><p>We zijn ervan overtuigd dat een goed georganiseerde administratie essentieel is voor het vlotte verloop en de naleving van de hoogste standaarden bij elk project.</p> </div>
+                  </div>
+                  <div class="col-md-4 effect hiddenGjin">
+                     <div><img src="images/warranty.png" class="services_img"></div>
+                     <div class="btn_main"><a href="#">Garantie</a></div>
+                     <div class="servicesTekst"><p>Bij onze dakrenovatieprojecten streven we niet alleen naar directe kwaliteit, maar ook naar langdurige gemoedsrust voor onze klanten. Daarom bieden wij een garantie van maar liefst 15 jaar op onze werkzaamheden.</p> </div>
                   </div>
                </div>
             </div>
