--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                          qua bediening als qua uitvoering zal u bij de dakdeckers zeker terugvinden en dit allemaal aan een heel interessant totaalbudget.
                           Wij zijn enkel toegespitst op dakwerken om een specialisatie te kunnen aanbieden aan jullie als eindconsument, 
                           dit zorgt ervoor dat je de crème de la creme krijgt wat betreft de dakwerken!</p>
-                     <div class="readmore_bt"><a href="#">Read More</a></div>
+                     <!-- <div class="readmore_bt"><a href="#">Read More</a></div> -->
                   </div>
                </div>
                <div class="col-md-6 padding_right_0">
@@ -97,37 +97,34 @@
          </div>
       </div>
       <!-- about section end -->
-      <!-- footer section start -->
-      <div class="footer_section layout_padding">
-         <div class="container">
-            <div class="input_btn_main">
-               <input type="text" class="mail_text" placeholder="Enter your email" name="Enter your email">
-               <div class="subscribe_bt"><a href="#">Subscribe</a></div>
-            </div>
-            <div class="location_main">
-               <div class="call_text"><img src="images/call-icon.png"></div>
-               <div class="call_text"><a href="#">Call +01 1234567890</a></div>
-               <div class="call_text"><img src="images/mail-icon.png"></div>
-               <div class="call_text"><a href="#">demo@gmail.com</a></div>
-            </div>
-            <div class="social_icon">
-               <ul>
-                  <li><a href="#"><img src="images/fb-icon.png"></a></li>
-                  <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-                  <li><a href="#"><img src="images/linkedin-icon.png"></a></li>
-                  <li><a href="#"><img src="images/instagram-icon.png"></a></li>
-               </ul>
+           <!-- footer section start -->
+           <div class="footer_section layout_padding">
+            <div class="container">
+   
+               <div class="location_main">
+                  <div class="call_text"><img src="images/call-icon.png"></div>
+                  <div class="call_text"><a href="#">+32 485 45 33 35</a></div>
+                  <div class="call_text"><img src="images/mail-icon.png"></div>
+                  <div class="call_text"><a href="#">info@dedakdeckers.com</a></div>
+               </div>
+               <div class="social_icon">
+                  <ul>
+                     <li><a href="#"><img src="images/fb-icon.png"></a></li>
+                     <li><a href="#"><img src="images/twitter-icon.png"></a></li>
+                     <li><a href="#"><img src="images/linkedin-icon.png"></a></li>
+                     <li><a href="#"><img src="images/instagram-icon.png"></a></li>
+                  </ul>
+               </div>
             </div>
          </div>
-      </div>
-      <!-- footer section end -->
-      <!-- copyright section start -->
-      <div class="copyright_section">
-         <div class="container">
-            <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free html  Templates</a></p>
+         <!-- footer section end -->
+         <!-- copyright section start -->
+         <div class="copyright_section">
+            <div class="container">
+               <p class="copyright_text">2024 All Rights Reserved.</p>
+            </div>
          </div>
-      </div>
-      <!-- copyright section end -->
+         <!-- copyright section end -->
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
