--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,6 @@
       <form action="https://formsubmit.co/info@dedakdeckers.com" method="POST">
          <input type="hidden" name="_subject" value="Contact met DeDakdeckers!">
          <input type="hidden" name="_captcha" value="false">
-         <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
          <div class="contact_section layout_padding">
             <div class="container">
               <h1 class="contact_taital">Geef hier uw gegevens zodat we contact met u kunnen opnemen.</h1>
@@ -107,37 +106,34 @@
 
       
       <!-- contact section end -->
-      <!-- footer section start -->
-      <div class="footer_section layout_padding">
-         <div class="container">
-            <div class="input_btn_main">
-               <input type="text" class="mail_text" placeholder="Enter your email" name="Enter your email">
-               <div class="subscribe_bt"><a href="#">Subscribe</a></div>
+            <!-- footer section start -->
+            <div class="footer_section layout_padding">
+               <div class="container">
+      
+                  <div class="location_main">
+                     <div class="call_text"><img src="images/call-icon.png"></div>
+                     <div class="call_text"><a href="#">+32 485 45 33 35</a></div>
+                     <div class="call_text"><img src="images/mail-icon.png"></div>
+                     <div class="call_text"><a href="#">info@dedakdeckers.com</a></div>
+                  </div>
+                  <div class="social_icon">
+                     <ul>
+                        <li><a href="#"><img src="images/fb-icon.png"></a></li>
+                        <li><a href="#"><img src="images/twitter-icon.png"></a></li>
+                        <li><a href="#"><img src="images/linkedin-icon.png"></a></li>
+                        <li><a href="#"><img src="images/instagram-icon.png"></a></li>
+                     </ul>
+                  </div>
+               </div>
             </div>
-            <div class="location_main">
-               <div class="call_text"><img src="images/call-icon.png"></div>
-               <div class="call_text"><a href="#">Call +01 1234567890</a></div>
-               <div class="call_text"><img src="images/mail-icon.png"></div>
-               <div class="call_text"><a href="#">demo@gmail.com</a></div>
+            <!-- footer section end -->
+            <!-- copyright section start -->
+            <div class="copyright_section">
+               <div class="container">
+                  <p class="copyright_text">2024 All Rights Reserved.</p>
+               </div>
             </div>
-            <div class="social_icon">
-               <ul>
-                  <li><a href="#"><img src="images/fb-icon.png"></a></li>
-                  <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-                  <li><a href="#"><img src="images/linkedin-icon.png"></a></li>
-                  <li><a href="#"><img src="images/instagram-icon.png"></a></li>
-               </ul>
-            </div>
-         </div>
-      </div>
-      <!-- footer section end -->
-      <!-- copyright section start -->
-      <div class="copyright_section">
-         <div class="container">
-            <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free html  Templates</a></p>
-         </div>
-      </div>
-      <!-- copyright section end -->
+            <!-- copyright section end -->
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
