Edited footer bg to solar panels and type

--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                      <h1 class="about_taital">Waar wij voor staan.</h1>
                      <p class="about_text">Wij als dakdeckers staan voor het aanbieden van kwalitatieve dakwerken zowel op vlak van gebruikte materialen 
                         als op vlak van vakmanschap. De rode draad door het volledig process bij De Dakdeckers zijn de adviseurs en de administratie waar
-                         wij zelf heel fier op zijn. We staan erop toe elke klant en elk project de nodige aandacht te geven. Het totaal packet zowel 
+                         wij zelf heel fier op zijn. We staan erop toe elke klant en elk project de nodige aandacht te geven. Het totaal pakket zowel 
                          qua bediening als qua uitvoering zal u bij de dakdeckers zeker terugvinden en dit allemaal aan een heel interessant totaalbudget.
                           Wij zijn enkel toegespitst op dakwerken om een specialisatie te kunnen aanbieden aan jullie als eindconsument, 
                           dit zorgt ervoor dat je de crème de la creme krijgt wat betreft de dakwerken!</p>
