Added extra photos on portfolio

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
          <div class="container">
             <h1 class="services_taital">Services </h1>
             <p class="services_text">
-               Bij De Dakdeckers streven we naar hoogwaardige dakwerken, zowel wat betreft materialen als vakmanschap. Onze adviseurs en administratieve team zorgen voor een vlotte ervaring door het hele proces, met speciale aandacht voor elke klant en project. Met ons totaalpakket bieden we uitstekende service en uitvoering tegen een aantrekkelijk budget, dankzij onze specialisatie in dakwerken garanderen we de beste kwaliteit voor onze klanten.</p>
+               Bij De Dakdeckers streven we naar hoogwaardige dakwerken, zowel wat betreft materialen als vakmanschap. Onze adviseurs en administratief team zorgen voor een vlotte begeleiding door het hele proces, met speciale aandacht voor elke klant en project. Met ons totaalpakket bieden we uitstekende service en uitvoering tegen een aantrekkelijk budget, dankzij onze specialisatie in dakwerken garanderen we de beste kwaliteit voor onze klanten.</p>
             <div class="services_section_2">
                <div class="row">
                   <div class="col-md-4 effect hiddenGjin">
