--- a/portfolio.html
+++ b/portfolio.html
@@ -118,6 +118,26 @@
             </div>
          </div>
       </div>
+      <div class="services_section layout_padding">
+         <div class="container">
+            <div class="services_section_2">
+               <div class="row">
+                  <div class="col-md-4 effect hiddenGjin">
+                     <div><img src="realisaties/7.JPG" class="services_img"></div>
+                     <div class="btn_main"><a target="_blank" href="https://www.google.com/maps/place/Ostend/@51.2605795,4.192968,11z/data=!4m6!3m5!1s0x47dca8d31895a595:0x3e97dbf009839842!8m2!3d51.2246631!4d2.9091818!16zL20vMDE0NWc5?entry=ttu">Kapellen</a></div>
+                  </div>
+                  <div class="col-md-4 effect hiddenGjin">
+                     <div><img src="realisaties/8.jpg" class="services_img"></div>
+                     <div class="btn_main"><a target="_blank" href="https://www.google.com/maps/place/Bruges/@51.2152512,2.8801815,13z/data=!4m6!3m5!1s0x47c350d0c11e420d:0x1aa2f35ac8834df7!8m2!3d51.2091807!4d3.2247552!16zL20vMGs0MjQ?entry=ttu">Malle</a></div>
+                  </div>
+                  <div class="col-md-4 effect hiddenGjin">
+                     <div><img src="realisaties/9.jpg" class="services_img"></div>
+                     <div class="btn_main"><a target="_blank" href="https://www.google.com/maps/place/Li%C3%A8ge/@50.6246813,5.5168778,12z/data=!3m1!4b1!4m6!3m5!1s0x47c0f74b8eacfcfb:0x40099ab2f4d6b40!8m2!3d50.6329586!4d5.5697498!16zL20vMGQ0azI?entry=ttu">Antwerpen</a></div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
             <!-- footer section start -->
             <div class="footer_section layout_padding">
                <div class="container">
