--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
          <div class="header_main">
             <div class="mobile_menu">
                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <div class="logo_mobile"><a href="index.html"><img src="images/logoo.png"></a></div>
+                  <div class="logo_mobile"><a href="index.html"><img width="350px" src="images/logo.png"></a></div>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
@@ -61,7 +61,7 @@
                </nav>
             </div>
             <div class="container-fluid">
-               <div class="logo"><a href="index.html"><img src="images/logoo.png"></a></div>
+               <div class="logo"><a href="index.html"><img width="350px" src="images/logo.png"></a></div>
                <div class="menu_main">
                   <ul>
                      <li><a href="index.html">Home</a></li>
