--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          <div class="header_main">
             <div class="mobile_menu">
                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <div class="logo_mobile"><a href="index.html"><img src="images/logoo.png"></a></div>
+                  <div class="logo_mobile"><a href="index.html"><img width="350px" src="images/logo.png"></a></div>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
@@ -62,7 +62,7 @@
                </nav>
             </div>
             <div class="container-fluid">
-               <div class="logo"><a href="index.html"><img src="images/logoo.png"></a></div>
+               <div class="logo"><a href="index.html"><img width="350px" src="images/logo.png"></a></div>
                <div class="menu_main">
                   <ul>
                      <li class="activeNav"><a href="index.html">Home</a></li>
@@ -106,7 +106,7 @@
             <div class="services_section_2">
                <div class="row">
                   <div class="col-md-4 effect hiddenGjin">
-                     <div><img src="images/qualityControl.png" class="services_img"></div>
+                     <div><img src="images/qualityControl.jpeg" class="services_img"></div>
                      <div class="btn_main"><a href="#">Kwaliteit</a></div>
                      <div class="servicesTekst"><p> Wij streven altijd naar de hoogste kwaliteit en vakmanschap in al onze projecten. Ons team van deskundige vakmensen zet zich in voor uitmuntendheid en streeft naar perfectie in elk aspect van het werk.</p> </div>
                   </div>
