--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          <div class="header_main">
             <div class="mobile_menu">
                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <div class="logo_mobile"><a href="index.html"><img width="350px" src="images/logo.png"></a></div>
+                  <div class="logo_mobile"><a href="index.html"><img width="350px" src="images/logogGreen.png"></a></div>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
@@ -62,7 +62,7 @@
                </nav>
             </div>
             <div class="container-fluid">
-               <div class="logo"><a href="index.html"><img width="350px" src="images/logo.png"></a></div>
+               <div class="logo"><a href="index.html"><img width="350px" src="images/logogGreen.png"></a></div>
                <div class="menu_main">
                   <ul>
                      <li class="activeNav"><a href="index.html">Home</a></li>
@@ -86,9 +86,9 @@
                   </div>
                   <div class="carousel-item">
                      <div class="container">
-                        <h1 class="banner_taital">Zonnepanelen.</h1>
+                        <h1 class="banner_taital">Zonnepanelen.</h1> <!-- als een baken van hoop voor -->
                         <p class="banner_text">Benut de kracht van de zon met zonnepanelen! In een wereld die steeds meer gericht is op duurzaamheid, 
-                           staat zonne-energie bekend als een baken van hoop voor een schonere, groenere toekomst.</p>
+                           staat zonne-energie bekend voor een schonere, groenere toekomst.</p>
                      </div>
                   </div>
                </div>
