Added photo on index after Waarom ons + transition.

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
          <div class="container">
             <h1 class="choose_taital">Waarom voor ons kiezen?</h1>
             <p class="choose_text">Ons bedrijf beschikt over uitgebreide ervaring en expertise op het gebied van dakrenovatie en zonnepaneleninstallatie. We hebben talloze projecten succesvol afgerond en kunnen bogen op een bewezen staat van dienst in het leveren van hoogwaardige resultaten.</p>
+            <div class="hiddenPhotoIndex"><img class="photoIndex" src="images/fotoWaaromOns.jpg"></div>
             <div class="read_bt_1"><a href="./about.html">Read More</a></div>
             <div class="newsletter_box">
                <h1 class="let_text">Neem nu contact op!</h1>
