--- a/contact.html
+++ b/contact.html
@@ -92,16 +92,12 @@
                     <input type="text" class="email-bt" placeholder="Phonenumber" name="phonenumber" required>
                  </div>
                  <div class="form-group">
-                    <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
+                    <textarea class="massage-bt" placeholder="Message" rows="5" id="comment" name="message"></textarea>
                  </div>
-                 <div class="send_btn"><button class="send_btnbtn" type="submit">Send</button></div>
+                 <div class="send_btn"> <input type="submit" value="Send"/></div>
               </div>
             </div>
           </div>
-
-
-
-
       </form>
 
       
