--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                </nav>
             </div>
             <div class="container-fluid">
+               <div class="container-fluidd"> </div>
                <div class="logo"><a href="index.html"><img width="350px" src="images/logogGreen.png"></a></div>
                <div class="menu_main">
                   <ul>
