--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,14 @@
       <link rel="stylesheet" href="css/owl.carousel.min.css">
       <link rel="stylesheet" href="css/owl.theme.default.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-GS6PZ9G2X4"></script>
+      <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+
+         gtag('config', 'G-GS6PZ9G2X4');
+      </script>
    </head>
    <body>
       <!-- header section start -->
