--- a/index.html
+++ b/index.html
@@ -116,17 +116,17 @@
             <div class="services_section_2">
                <div class="row">
                   <div class="col-md-4 effect hiddenGjin">
-                     <div><img src="images/qualityControl.jpeg" class="services_img"></div>
+                     <div class="pleaseCenter"><img src="images/qualityControl.jpeg"></div>
                      <div class="btn_main"><a href="#">Kwaliteit</a></div>
                      <div class="servicesTekst"><p> Wij streven altijd naar de hoogste kwaliteit en vakmanschap in al onze projecten. Ons team van deskundige vakmensen zet zich in voor uitmuntendheid en streeft naar perfectie in elk aspect van het werk.</p> </div>
                   </div>
                   <div class="col-md-4 effect hiddenGjin">
-                     <div><img src="images/teamwork.jpg" class="services_img"></div>
+                     <div class="pleaseCenter"><img src="images/teamwork.jpg"></div>
                      <div class="btn_main"><a href="#">Administratief</a></div>
                      <div class="servicesTekst"><p>We zijn ervan overtuigd dat een goed georganiseerde administratie essentieel is voor het vlotte verloop en de naleving van de hoogste standaarden bij elk project.</p> </div>
                   </div>
                   <div class="col-md-4 effect hiddenGjin">
-                     <div><img src="images/warrantyHD.jpg" class="services_img"></div>
+                     <div class="pleaseCenter"><img src="images/warrantyHD.jpg"></div>
                      <div class="btn_main"><a href="#">Garantie</a></div>
                      <div class="servicesTekst"><p>Bij onze dakrenovatieprojecten streven we niet alleen naar directe kwaliteit, maar ook naar langdurige gemoedsrust voor onze klanten. Daarom bieden wij een garantie van maar liefst 15 jaar op onze werkzaamheden.</p> </div>
                   </div>
